--- a/230202게시판CRUD/package.json
+++ b/230202게시판CRUD/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   }
