--- a/230213회원가입로그인/package.json
+++ b/230213회원가입로그인/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^3.1.2",
     "sequelize": "^6.28.0"
   }
